# Zephyr

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml
app/next/: CMakeLists.txt
app/next/include/zephyr/renderer2/: render_engine.hpp
app/next/include/zephyr/renderer2/backend/: render_backend.hpp  render_backend_ogl.hpp  render_backend_vk.hpp
app/next/include/zephyr/renderer2/vulkan/: vulkan_physical_device.hpp
app/next/src/: gltf_loader.hpp  main.cpp  main_window.cpp  main_window.hpp  vulkan_instance.cpp  vulkan_instance.hpp
app/next/src/renderer2/: render_engine.cpp
app/next/src/renderer2/backend/opengl/: render_backend.cpp
app/next/src/renderer2/backend/vulkan/: render_backend.cpp
app/next/src/renderer2/render_backend/vulkan/: render_backend.cpp
app/next/src/renderer2/vulkan/: vulkan_instance.cpp
app/next/src/sdl2_mgpu/: metal_layer_from_ns_window.mm  sdl2_mgpu.cpp  sdl2_mgpu.hpp
app/next/src/shader/: triangle.frag.glsl  triangle.vert.glsl  triangle.vert.h
app/runtime/: CMakeLists.txt
app/runtime/src/: application.cpp  application.hpp  main.cpp  main_window.cpp  main_window.hpp
app/runtime/src/renderer/: buffer_cache.cpp  buffer_cache.hpp  material.hpp  material_pipeline_cache.cpp  material_pipeline_cache.hpp  resource_uploader.cpp  resource_uploader.hpp  sampler_cache.cpp  sampler_cache.hpp  std430_buffer_layout.hpp  texture_cache.cpp  texture_cache.hpp
app/runtime/src/shader/: build.sh  mesh.frag.glsl  mesh.frag.h  mesh.vert.glsl  mesh.vert.h  rasterize.comp.glsl  rasterize.comp.h
test/: CMakeLists.txt
test/gpu/: CMakeLists.txt
zephyr/: CMakeLists.txt
zephyr/common/: CMakeLists.txt
zephyr/common/include/zephyr/: bit.hpp  event.hpp  float.hpp  hash.hpp  integer.hpp  literal.hpp  meta.hpp  non_copyable.hpp  non_moveable.hpp  panic.hpp  punning.hpp  result.hpp  uid.hpp  vector_n.hpp
zephyr/common/src/: eastl.cpp  panic.cpp  uid.cpp
zephyr/gpu/: CMakeLists.txt
zephyr/gpu/include/zephyr/gpu/: bind_group.hpp  buffer.hpp  command_buffer.hpp  command_pool.hpp  compute_pipeline.hpp  enums.hpp  fence.hpp  pipeline_builder.hpp  pipeline_layout.hpp  queue.hpp  render_device.hpp  render_pass.hpp  render_target.hpp  sampler.hpp  shader_module.hpp  texture.hpp
zephyr/gpu/include/zephyr/gpu/backend/: vulkan.hpp
zephyr/gpu/src/: dummy.cpp
zephyr/gpu/src/vulkan/: bind_group.hpp  buffer.hpp  command_buffer.hpp  command_pool.hpp  compute_pipeline.hpp  fence.hpp  pipeline_builder.hpp  pipeline_layout.hpp  queue.hpp  render_device.cpp  render_pass.hpp  render_pass_builder.hpp  render_target.hpp  sampler.hpp  shader_module.hpp  texture.hpp  texture_view.hpp
zephyr/io/: CMakeLists.txt
zephyr/io/include/zephyr/io/: gltf.hpp
zephyr/io/src/: gltf.cpp
zephyr/logger/: CMakeLists.txt
zephyr/logger/include/zephyr/logger/: logger.hpp
zephyr/logger/include/zephyr/logger/sink/: console.hpp  file.hpp
zephyr/logger/src/: logger.cpp
zephyr/logger/src/sink/: console.cpp  file.cpp
zephyr/math/: CMakeLists.txt
zephyr/math/include/zephyr/math/: box3.hpp  frustum.hpp  matrix4.hpp  plane.hpp  quaternion.hpp  rotation.hpp  traits.hpp  vector.hpp
zephyr/renderer/: CMakeLists.txt
zephyr/renderer/include/zephyr/renderer/: buffer_resource.hpp  geometry.hpp  mesh.hpp  render_engine.hpp  render_scene.hpp  resource.hpp
zephyr/renderer/include/zephyr/renderer/backend/: render_backend.hpp  render_backend_mgpu.hpp  render_backend_ogl.hpp  render_backend_vk.hpp
zephyr/renderer/include/zephyr/renderer/buffer/: buffer_resource.hpp  buffer_resource_base.hpp  index_buffer.hpp  uniform_buffer.hpp  vertex_buffer.hpp
zephyr/renderer/include/zephyr/renderer/component/: camera.hpp  mesh.hpp
zephyr/renderer/include/zephyr/renderer/engine/: geometry_cache.hpp  material_cache.hpp  texture_cache.hpp
zephyr/renderer/include/zephyr/renderer/geometry/: index_buffer.hpp  vertex_buffer.hpp
zephyr/renderer/include/zephyr/renderer/glsl/: std140_buffer_layout.hpp  std430_buffer_layout.hpp  type.hpp  variable_list.hpp
zephyr/renderer/include/zephyr/renderer/material/: material.hpp  technique.hpp
zephyr/renderer/include/zephyr/renderer/resource/: buffer_resource.hpp  geometry.hpp  index_buffer.hpp  material.hpp  resource.hpp  texture.hpp  texture_2d.hpp  uniform_buffer.hpp  vertex_buffer.hpp
zephyr/renderer/include/zephyr/renderer/texture/: sampler_resource.hpp  texture_2D.hpp  texture_cube.hpp  texture_resource.hpp
zephyr/renderer/include/zephyr/renderer/vulkan/: vulkan_instance.hpp  vulkan_physical_device.hpp
zephyr/renderer/src/: render_engine.cpp  render_scene.cpp
zephyr/renderer/src/backend/mgpu/: render_backend.cpp  render_backend.hpp
zephyr/renderer/src/backend/mgpu/utility/: dynamic_buffer.cpp  dynamic_buffer.hpp
zephyr/renderer/src/backend/opengl/: dynamic_gpu_array.cpp  dynamic_gpu_array.hpp  render_backend.cpp  render_backend.hpp  render_geometry.cpp  render_geometry.hpp
zephyr/renderer/src/backend/opengl/render_geometry/: render_geometry.cpp  render_geometry.hpp  render_geometry_manager.cpp  render_geometry_manager.hpp
zephyr/renderer/src/backend/opengl/render_texture/: render_texture.cpp  render_texture.hpp  render_texture_manager.cpp  render_texture_manager.hpp
zephyr/renderer/src/backend/opengl/shader/: draw_call.glsl.hpp  draw_list_builder.glsl.hpp
zephyr/renderer/src/backend/vulkan/: render_backend.cpp
zephyr/renderer/src/backend/vulkan/shader/: triangle.frag.h
zephyr/renderer/src/engine/: geometry_cache.cpp  material_cache.cpp  texture_cache.cpp
zephyr/renderer/src/vulkan/: vulkan_instance.cpp
zephyr/scene/: CMakeLists.txt
zephyr/scene/include/zephyr/scene/: component.hpp  mesh.hpp  node.hpp  scene.hpp  scene_graph.hpp  scene_node.hpp  transform.hpp
zephyr/scene/src/: dummy.cpp  scene_graph.cpp  transform.cpp
zephyr/window/: CMakeLists.txt
zephyr/window/include/zephyr/window/: swap_chain.hpp  window.hpp
zephyr/window/src/: window.cpp  window.hpp
zephyr/window/src/vulkan/: vulkan_swap_chain.cpp  vulkan_swap_chain.hpp  vulkan_window.cpp  vulkan_window.hpp
(+22 files in other folders)
